--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -112,6 +112,8 @@
     <None Remove="Resources\Icons\tw3proj.png" />
     <None Remove="Resources\Icons\whitelogo.png" />
     <None Remove="Resources\Icons\work.png" />
+    <None Remove="Resources\Images\Files\.cpmodproj.png" />
+    <None Remove="Resources\Images\Files\.w3modproj.png" />
     <None Remove="Wkit_Icon_Flattened_256x.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -372,6 +374,8 @@
     <Resource Include="Resources\Icons\tw3proj.png" />
     <Resource Include="Resources\Icons\whitelogo.png" />
     <Resource Include="Resources\Icons\work.png" />
+    <Resource Include="Resources\Images\Files\.cpmodproj.png" />
+    <Resource Include="Resources\Images\Files\.w3modproj.png" />
     <Resource Include="Resources\Images\Files\apb_32x.png" />
     <Resource Include="Resources\Images\Files\BlankFile_16x.png" />
     <Resource Include="Resources\Images\Files\blend_32x.png" />
