--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -45,4 +45,8 @@
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\PropertyGridEditors\" />
+  </ItemGroup>
+
 </Project>
