--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -20,9 +20,15 @@
                 <value>True</value>
             </setting>
             <setting name="Reorganizing_RegionsInsertKeepEvenIfEmpty" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Reorganizing_RunAtStartOfCleanup" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Formatting_CommentXmlKeepTagsTogether" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Formatting_CommentXmlSpaceSingleTags" serializeAs="String">
                 <value>True</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
