--- a/CP77.CR2W/WolvenKit.Cyberformats.csproj
+++ b/CP77.CR2W/WolvenKit.Cyberformats.csproj
@@ -37,4 +37,10 @@
 		<ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Reference Include="PresentationCore">
+	    <HintPath>..\..\..\..\..\Program Files\dotnet\packs\Microsoft.WindowsDesktop.App.Ref\5.0.0\ref\net5.0\PresentationCore.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
+
 </Project>
