--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
@@ -22,6 +22,7 @@
     <PackageReference Include="Catel.MVVM" Version="5.12.12" />
     <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
     <PackageReference Include="MahApps.Metro" Version="2.4.3" />
+    <PackageReference Include="NAudio" Version="1.10.0" />
     <PackageReference Include="Orc.CommandLine" Version="4.1.1" />
     <PackageReference Include="Orc.Squirrel" Version="4.1.0" />
     <PackageReference Include="Serilog" Version="2.10.0" />
@@ -38,6 +39,8 @@
     <PackageReference Include="NodeNetworkToolkit" Version="5.1.2" />
     <PackageReference Include="WolvenKit.Shell.Ribbon.FluentMahApps" Version="4.2.5" />
         <PackageReference Include="Pfim" Version="0.9.1" />
+    <PackageReference Include="WolvenKit.WPFSoundVisualizationLibNet5" Version="1.0.1" />
+    <PackageReference Include="taglib-sharp-netstandard2.0" Version="2.1.0" />
 
 
 
