--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
@@ -40,6 +40,10 @@
 
 
 
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Catel\" />
   </ItemGroup>
 
 </Project>
