--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -21,7 +21,6 @@
     <PackageReference Include="Orc.CommandLine" Version="4.1.1" />
     <PackageReference Include="Orc.Squirrel" Version="4.1.0" />
     <PackageReference Include="Serilog" Version="2.10.0" />
-    <PackageReference Include="WolvenKit.Cyberformats" Version="1.1.0" />
     <PackageReference Include="WolvenKit.HandyControl" Version="3.2.0" />
     <PackageReference Include="Catel.Fody" Version="4.7.0-alpha0115" PrivateAssets="all" />
     <PackageReference Include="Orc.ProjectManagement" Version="4.1.1" />
@@ -41,6 +40,15 @@
 
 
 
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="WolvenKit.CR2W">
+      <HintPath>..\WolvenKit.CR2W\bin\Release\net5.0\WolvenKit.CR2W.dll</HintPath>
+    </Reference>
+    <Reference Include="WolvenKit.Cyberformats">
+      <HintPath>..\CP77.CR2W\bin\Release\net5.0\WolvenKit.Cyberformats.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
