--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -1,16 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WolvenKit.Cyberformats" Version="1.1.0" />
+    <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
     <ProjectReference Include="..\WolvenKit.Witcher3Formats\WolvenKit.Witcher3Formats.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="WolvenKit.Cyberformats">
+      <HintPath>..\CP77.CR2W\bin\Release\net5.0\WolvenKit.Cyberformats.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
