--- a/CP77.MSTests/WolvenKit.CLI.MSTests.csproj
+++ b/CP77.MSTests/WolvenKit.CLI.MSTests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CP77.CR2W\WolvenKit.Cyberformats.csproj" />
+    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
