--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -47,7 +47,7 @@
       <HintPath>..\WolvenKit.RED3.CR2W\bin\Release\net5.0\WolvenKit.RED3.CR2W.dll</HintPath>
     </Reference>
     <Reference Include="WolvenKit.RED4.CR2W">
-      <HintPath>..\WWolvenKit.RED4.CR2W\bin\Release\net5.0\WolvenKit.RED4.CR2W.dll</HintPath>
+      <HintPath>..\WolvenKit.RED4.CR2W\bin\Release\net5.0\WolvenKit.RED4.CR2W.dll</HintPath>
     </Reference>
   </ItemGroup>
 
