--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -13,7 +13,9 @@
     <PackageTags>wolvenkit</PackageTags>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <TargetFramework>net5.0</TargetFramework>
-      <Version>1.1.0</Version>
+      <Version>1.2.0</Version>
+      <AssemblyVersion>1.2.0.0</AssemblyVersion>
+      <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
