--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,6 +114,17 @@ jobs:
     - name: dotnet restore
       run: dotnet restore ./CP77Tools.sln
 
+    - name: Download Artifact RED3 CR2W
+      uses: actions/download-artifact@v2
+      with:
+        name: artifact_wkit-win-red3
+        path: WolvenKit.RED3.CR2W/bin/Release/net5.0/WolvenKit.RED3.CR2W.dll
+    - name: Download Artifact RED4 CR2W
+      uses: actions/download-artifact@v2
+      with:
+        name: artifact_wkit-win-red4
+        path: WolvenKit.RED4.CR2W/bin/Release/net5.0/WolvenKit.RED4.CR2W.dll
+
     - name: dotnet build CP77Tools.sln
       run: dotnet build ./CP77Tools.sln --configuration Release --no-restore
     - name: Upload a Build Artifact
@@ -137,6 +148,17 @@ jobs:
       run: dotnet clean ./CP77Tools.sln --configuration Release && dotnet nuget locals all --clear
     - name: dotnet restore
       run: dotnet restore ./CP77Tools.sln
+
+    - name: Download Artifact RED3 CR2W
+      uses: actions/download-artifact@v2
+      with:
+        name: artifact_wkit-osx-red3
+        path: WolvenKit.RED3.CR2W/bin/Release/net5.0/WolvenKit.RED3.CR2W.dll
+    - name: Download Artifact RED4 CR2W
+      uses: actions/download-artifact@v2
+      with:
+        name: artifact_wkit-osx-red4
+        path: WolvenKit.RED4.CR2W/bin/Release/net5.0/WolvenKit.RED4.CR2W.dll
     
     - name: dotnet build CP77Tools.sln
       run: dotnet build ./CP77Tools.sln --configuration Release --no-restore
