--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,8 @@ jobs:
       with:
         name: artifact_wkit-win-red4
         path: WolvenKit.RED4.CR2W/bin/Release/net5.0/WolvenKit.RED4.CR2W.dll
-        
+    - name: Display structure of downloaded files
+      run: ls -R
 
     - name: dotnet build WolvenKit.sln
       run: dotnet build ./WolvenKit.sln --configuration Release --no-restore
@@ -124,6 +125,8 @@ jobs:
       with:
         name: artifact_wkit-win-red4
         path: WolvenKit.RED4.CR2W/bin/Release/net5.0/WolvenKit.RED4.CR2W.dll
+    - name: Display structure of downloaded files
+      run: ls -R
 
     - name: dotnet build CP77Tools.sln
       run: dotnet build ./CP77Tools.sln --configuration Release --no-restore
@@ -159,7 +162,9 @@ jobs:
       with:
         name: artifact_wkit-osx-red4
         path: WolvenKit.RED4.CR2W/bin/Release/net5.0/WolvenKit.RED4.CR2W.dll
-    
+    - name: Display structure of downloaded files
+      run: ls -R
+          
     - name: dotnet build CP77Tools.sln
       run: dotnet build ./CP77Tools.sln --configuration Release --no-restore
     - name: Upload a Build Artifact
